# FlaskBiblioteca

./: LICENSE  README.md
app/: .secrets.toml  package.json  pyproject.toml  settings.toml
app/src/: __init__.py
app/src/backend/extensions/: admin.py  authentication.py  commands.py  configuration.py  database.py  security.py
app/src/backend/models/: models.py
app/src/backend/routes/admin/: forms.py  views.py
app/src/backend/routes/api/: views.py
app/src/backend/routes/auth/: forms.py  views.py
app/src/backend/routes/main/: forms.py  views.py
app/src/backend/services/: book_services.py  lending_services.py
app/src/backend/utils/: utils.py
app/src/frontend/static/css/: style.css
app/src/frontend/static/js/: scripts.js
app/src/frontend/templates/: layout.html
app/src/frontend/templates/auth/: login.html
app/src/frontend/templates/errors/: 403.html  404.html
app/src/frontend/templates/pages/: add_books.html  books.html  index.html  lendings.html  new_lending.html
app/tests/: conftest.py  test_base_app.py  test_model.py
flaskBiblioteca/: pyproject.toml  settings.toml  tailwind.config.js
flaskBiblioteca/app/: __init__.py
flaskBiblioteca/app/backend/extensions/: admin.py  appearance.py  authentication.py  commands.py  configuration.py  database.py  mail.py  security.py
flaskBiblioteca/app/backend/model/: models.py
flaskBiblioteca/app/backend/routes/admin/: forms.py  views.py
flaskBiblioteca/app/backend/routes/api/: __init__.py  views.py
flaskBiblioteca/app/backend/services/: admin_services.py  book_services.py  lending_services.py  services.py
flaskBiblioteca/app/backend/utils/: operations.py
flaskBiblioteca/app/frontend/templates/: layout.html
flaskBiblioteca/tests/: test_base_app.py  test_model.py
(+44 files in other folders)
