[project]
name = "flaskbiblioteca"
version = "0.1.0"
description = ""
authors = [
    {name = "Milton Luís",email = "miltonluis138@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-admin (>=2.0.2,<3.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)",
    "flask-argon2 (>=0.3.0.0,<0.4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "dynaconf (>=3.2.12,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "flask-shell-ipython (>=0.5.3,<0.6.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]

[dependency-groups]
lint = [
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.5,<0.15.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

